--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.version>3.2.5</maven.version>
-    <terracotta-core.version>5.3.7</terracotta-core.version>
-    <terracotta-platform.version>5.3.6</terracotta-platform.version>
-    <terracotta-apis.version>1.3.1</terracotta-apis.version>
-    <terracotta-configuration.version>10.3.1</terracotta-configuration.version>
-    <ehcache.version>3.4.0</ehcache.version>
+    <terracotta-core.version>5.4.1-pre5</terracotta-core.version>
+    <terracotta-platform.version>5.4.1-pre7</terracotta-platform.version>
+    <terracotta-apis.version>1.4.0</terracotta-apis.version>
+    <terracotta-configuration.version>10.4.0</terracotta-configuration.version>
+    <ehcache.version>3.5.1-internal7</ehcache.version>
+    <slf4j.version>1.7.25</slf4j.version>
+    <logback.version>1.2.3</logback.version>
   </properties>
 
   <dependencyManagement>
@@ -195,6 +197,21 @@
         <artifactId>megatron-plugin-graphite</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jul-to-slf4j</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -326,6 +343,10 @@
     <repository>
       <id>terracotta-releases</id>
       <url>http://www.terracotta.org/download/reflector/releases</url>
+    </repository>
+    <repository>
+      <id>terracotta-internal-releases</id>
+      <url>http://nexus.terracotta.eur.ad.sag/content/groups/public/</url>
     </repository>
   </repositories>
 
