Close #5: Enable to use Megatron not-only server-side

--- a/megatron-distribution/pom.xml
+++ b/megatron-distribution/pom.xml
@@ -43,6 +43,10 @@
       <artifactId>megatron-server</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.mycila.megatron</groupId>
+      <artifactId>megatron-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.mycila.megatron.plugins</groupId>
       <artifactId>megatron-plugin-console</artifactId>
     </dependency>
