Close #1: Prometheus plugin using StatsD Exporter server

--- a/megatron-distribution/pom.xml
+++ b/megatron-distribution/pom.xml
@@ -68,6 +68,10 @@
     </dependency>
     <dependency>
       <groupId>com.mycila.megatron.plugins</groupId>
+      <artifactId>megatron-plugin-prometheus-statsd</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.mycila.megatron.plugins</groupId>
       <artifactId>megatron-plugin-graphite</artifactId>
     </dependency>
     <dependency>
