--- a/megatron-tests/pom.xml
+++ b/megatron-tests/pom.xml
@@ -189,6 +189,11 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>com.mycila.megatron.plugins</groupId>
+                  <artifactId>megatron-plugin-prometheus-statsd</artifactId>
+                  <version>${project.version}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>com.mycila.megatron.plugins</groupId>
                   <artifactId>megatron-plugin-graphite</artifactId>
                   <version>${project.version}</version>
                 </artifactItem>
