--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,11 @@
       </dependency>
       <dependency>
         <groupId>com.mycila.megatron.plugins</groupId>
+        <artifactId>megatron-plugin-prometheus-statsd</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.mycila.megatron.plugins</groupId>
         <artifactId>megatron-plugin-graphite</artifactId>
         <version>${project.version}</version>
       </dependency>
