--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
       </dependency>
       <dependency>
         <groupId>com.mycila.megatron.plugins</groupId>
+        <artifactId>megatron-plugin-prometheus-gateway</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.mycila.megatron.plugins</groupId>
         <artifactId>megatron-plugin-graphite</artifactId>
         <version>${project.version}</version>
       </dependency>
