--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
       </dependency>
       <dependency>
         <groupId>org.terracotta</groupId>
+        <artifactId>packaging-support</artifactId>
+        <version>${terracotta-apis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.terracotta</groupId>
         <artifactId>entity-server-api</artifactId>
         <version>${terracotta-apis.version}</version>
       </dependency>
