Issue #28: Added recorder plugin to replay statistics and notification events

--- a/megatron-tests/pom.xml
+++ b/megatron-tests/pom.xml
@@ -169,6 +169,11 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>com.mycila.megatron.plugins</groupId>
+                  <artifactId>megatron-plugin-recorder</artifactId>
+                  <version>${project.version}</version>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>com.mycila.megatron.plugins</groupId>
                   <artifactId>megatron-plugin-rest</artifactId>
                   <version>${project.version}</version>
                 </artifactItem>
