--- a/plugins/megatron-plugin-recorder/pom.xml
+++ b/plugins/megatron-plugin-recorder/pom.xml
@@ -20,30 +20,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>megatron</artifactId>
-    <groupId>com.mycila.megatron</groupId>
+    <artifactId>megatron-plugins</artifactId>
+    <groupId>com.mycila.megatron.plugins</groupId>
     <version>1.4.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>megatron-api</artifactId>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.terracotta.management.dist</groupId>
-      <artifactId>mnm-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.terracotta</groupId>
-      <artifactId>packaging-support</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <artifactId>megatron-plugin-recorder</artifactId>
 
 </project>
