--- a/megatron-tests/pom.xml
+++ b/megatron-tests/pom.xml
@@ -35,6 +35,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.terracotta.internal</groupId>
       <artifactId>galvan-support</artifactId>
       <scope>test</scope>
